--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,8 @@ name: Build
 on: [push, pull_request]
 
 env:
-  GITHUB_DOCKER_IMAGE_NAME: accept-nano
-  DOCKER_HUB_IMAGE_NAME: acceptnano/acceptnano
+  GITHUB_DOCKER_IMAGE_NAME: accept-banano
+  DOCKER_HUB_IMAGE_NAME: tigwyk/acceptbanano
 
 jobs:
   test:
