--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@ vendor/
 
 # No Docker compose file 
 docker-compose.yml
+.vscode/launch.json
+.vs/VSWorkspaceState.json
+.vs/slnx.sqlite
+.vs/ProjectSettings.json
+.gitignore
